Add day 2 solutions 🙌

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,10 @@
 export("%>%")
 export(aoc_solutions)
 export(example_data_01)
+export(example_data_02)
 export(f01a)
 export(f01b_slider)
 export(f01b_windowed)
+export(f02a)
+export(f02b)
 importFrom(magrittr,"%>%")
